create github pages

--- a/index.html
+++ b/index.html
@@ -43,19 +43,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.com"></a>
-                </li></ul>
+            
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"></a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
 
     
 
