--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">website building software</a></section><section class="header4 cid-qGVj6QdPOo mbr-parallax-background" id="header4-t">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="header4 cid-qGVj6QdPOo mbr-parallax-background" id="header4-t">
 
     
 
@@ -221,7 +221,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/vlindermeisje-2713x2753.png" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/img-1744-1200x1600.jpg" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
