create github pages

--- a/page2.html
+++ b/page2.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap carousel</a></section><section class="header4 cid-qGVj6QdPOo mbr-parallax-background" id="header4-t">
+<section class="engine"><a href="https://mobirise.co/c">web maker</a></section><section class="header4 cid-qGVj6QdPOo mbr-parallax-background" id="header4-t">
 
     
 
