--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
+<section class="engine"><a href="https://mobirise.co/b">web site creator</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
 
     
 
@@ -83,7 +83,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://mobirise.com/">
+                    <a href="http://www.divabenini.be" target="_blank">
                         <img src="assets/images/dsign-334x333.png" alt="Mobirise" title="">
                     </a>
                 </div>
