create github pages

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -49,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">website software</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
+<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
 
     
 
@@ -60,10 +61,10 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">&nbsp; &nbsp; &nbsp;<br>Jan De Schutter</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2"><strong><em>
-                    Temporary Contemporary</em></strong></h3>
+                    </em></strong><br><strong><em>Temporary Contemporary</em></strong></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page1.html" target="_blank">PAINTINGS</a>
-                    <a class="btn btn-md btn-secondary display-4" href="page2.html" target="_blank">MIXED MEDIA</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page1.html" target="_blank">PAINTINGS</a>
+                    <a class="btn btn-md btn-info display-4" href="page2.html" target="_blank">MIXED MEDIA</a></div>
             </div>
         </div>
     </div>
@@ -127,12 +128,14 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
