create github pages

--- a/page2.html
+++ b/page2.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="header4 cid-qGVj6QdPOo mbr-parallax-background" id="header4-t">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="header4 cid-qGVj6QdPOo mbr-parallax-background" id="header4-t">
 
     
 
@@ -198,7 +198,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/pijpster-510x528.png" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/img-1745-960x1280.jpg" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
