--- a/page1.html
+++ b/page1.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
+<section class="engine"><a href="https://mobirise.co/c">web maker</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
 
     
 
@@ -323,7 +323,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/img-1723-480x640.jpg" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/img-1718-480x640.jpg" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
