--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="cid-qGV9lmTZMc mbr-fullscreen" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
 
     
 
@@ -63,8 +63,8 @@
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2"><strong><em>
                     </em></strong><br><strong><em>Temporary Contemporary</em></strong></h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page1.html" target="_blank">PAINTINGS</a>
-                    <a class="btn btn-md btn-info display-4" href="page2.html" target="_blank">MIXED MEDIA</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="page1.html">PAINTINGS</a>
+                    <a class="btn btn-md btn-info display-4" href="page2.html">MIXED MEDIA</a></div>
             </div>
         </div>
     </div>
