--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
 
     
 
@@ -167,7 +167,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/img-1742-1280x960.jpg" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/img-1753-1024x768.jpg" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
