--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
+<section class="engine"><a href="https://mobirise.co/e">web page maker software</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
 
     
 
@@ -192,7 +192,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/img-1654-1280x960.jpg" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/graffiti-on-canvas-1280x740.jpg" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
