create github pages

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://jandeschutter.github.io/JanDeSchutter/"></a> <a class="btn btn-sm btn-primary display-4" href="https://jandeschutter.github.io/JanDeSchutter/"></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.jandeschutter.be"></a> <a class="btn btn-sm btn-primary display-4" href="https://jandeschutter.github.io/JanDeSchutter/"></a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free website creator</a></section><section class="cid-qGV9lmTZMc" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="cid-qGV9lmTZMc" data-bg-video="ttps://www.youtube.com/watch?v=iJedItHU5Zs" id="header2-i">
 
     
 
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">De Schutter Jan<br>crttime@gmail.com</h5>
+                <h5 class="pb-3">De Schutter Jan<br>crttime@gmail.com<br>www.divabenini.be</h5>
                 <p class="mbr-text"><br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
