--- a/page1.html
+++ b/page1.html
@@ -44,12 +44,12 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://jandeschutter.github.io/JanDeSchutter/"></a> <a class="btn btn-sm btn-primary display-4" href="https://jandeschutter.github.io/JanDeSchutter/"></a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.jandeschutter.be"></a> <a class="btn btn-sm btn-primary display-4" href="https://jandeschutter.github.io/JanDeSchutter/"></a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="header4 cid-qGVaGwjNGY mbr-fullscreen mbr-parallax-background" id="header4-l">
+<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="header4 cid-qGVaGwjNGY mbr-parallax-background" id="header4-l">
 
     
 
